# URIE

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_force_rls.py  0003_interview_turns.py
docs/: MANIFESTO.md  PILOT_RUNBOOK.md  Production-Grade_Technical_Specification.md  StrategicBusinessModel.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  LandingPage.tsx  api.ts  auth.tsx  index.css  landingCopy.ts  main.tsx  types.ts  ui.tsx
frontend/src/test/: setup.ts
scripts/: init_app_role.sql  seed_demo.py
src/urie/: __init__.py  config.py  main.py
src/urie/adapters/: memory.py
src/urie/adapters/db/: models.py  repositories.py  session.py
src/urie/adapters/outbox/: __init__.py  bus.py
src/urie/adapters/providers/: mock.py  prompted.py
src/urie/api/: deps.py
src/urie/api/v1/: router.py  (+1 more)
src/urie/domain/: __init__.py  challenge.py  entity_resolution.py  facts.py  interview.py  reasoning.py
src/urie/llm/: __init__.py  base.py  errors.py  factory.py  messages.py  retry.py  schemas.py
src/urie/ports/: __init__.py
src/urie/services/: ingestion.py  interview.py  pipeline.py  reasoning_worker.py
src/urie/static/: index.html
tests/: conftest.py
tests/integration/: test_interview.py  test_rls.py  test_vertical_slice.py  test_vertical_slice_memory.py
tests/unit/: test_challenge.py  test_entity_resolution.py  test_facts.py  test_interview_gaps.py  test_llm_gateway.py  test_reasoning.py
(+10 files in other folders)
