[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "urie"
version = "0.1.0"
description = "Unified Relational Intelligence Engine — Relationship Intelligence core"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "pgvector>=0.3.6",
    "rapidfuzz>=3.10.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.28.0",
    "greenlet>=3.1.0",
    "eval_type_backport>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/urie"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
